# atelier

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  docs.yml  rust-ci.yml  rust.yaml
atelier/: Cargo.toml
atelier-rs/: Cargo.toml
atelier-rs/examples/: naive_ob_progression.rs
atelier-rs/src/simulation/: generators.rs
atelier/examples/: ob_gen_naive.rs  ob_gen_synthetic.rs
atelier/src/data/: market.rs
docker/: Dockerfile.debian-mps  Dockerfile.model-clarity  Dockerfile.pytorch-cpu  Dockerfile.pytorch-gpu  Dockerfile.pytorch-mps
docker/mps/: Dockerfile.fedora-mps  NOTES.md  asahi_install_docker.sh
docker/nvim/: init.lua
docker/nvim/lua/: plugins.lua  vim-options.lua
docker/nvim/lua/plugins/: neo-tree.lua  telescope.lua  treesitter.lua
docs/: changelog.md  index.md
docs/guide/: installation.md
examples/: naive_ob_progression.rs  probabilistic_generators.rs  synthetic_orderbook.rs
examples/forecasting/: e1_volatility.py  e1_volatility.toml
python/atelier/: __init__.py  main.py
python/atelier/core/: dataTypes.py  marketdataTypes.py  metricdataTypes.py  modeldataTypes.py
python/atelier/data/: datasets.py
python/atelier/metrics/: __init__.py  mape.py  mse.py
python/atelier/models/: autoencoder.py  evaluator.py  inferencer.py  optimizer.py  trainer.py
python/atelier/utilities/: checks.py
rust/: core.rs  data_types.rs  lib.rs  main.rs  main.txt  trackers.rs
rust/data/data_types/: mod.rs  order.rs  orderbook.rs
rust/simulation/: randomizer.rs
rust/structs/: mod.rs
rust/structs/marketdata/: level.rs  mod.rs  order.rs  orderbook.rs
scripts/: build-wheels.sh
src/: lib.rs
src/data/: market.rs
src/data/market/: level.rs  mod.rs  order.rs  orderbook.rs
src/simulation/: generators.rs  mod.rs  randomizer.rs
tests/: base.py  orderbook_progression.rs  test_orderbook.rs
