[package]
name = "atelier"
version = "0.0.3"
edition = "2021"
description = "A cognitive workshop for synthetic artificial intelligence"
authors = ["IteraLabs.ai <contact@iteralabs.ai>"]
license = "Apache-2.0"
repository = "https://github.com/iteralabs/atelier"

[lib]
name = "atelier"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tch = { version = "0.16.0"}

[dependencies.pyo3]
version = "0.21.0"
features = ["extension-module"]

[profile.release-lto]
inherits = "release"
lto = true

