[package]
name = "atelier"
version = "0.0.4"
edition = "2021"
description = "Computational Workshop and framework for Market microstructure replay and simulation"
authors = ["IteraLabs.ai <contact@iteralabs.ai>"]
license = "Apache-2.0"
repository = "https://github.com/iteralabs/atelier"
keywords = ["machine-learning", "framework", "math", "crypto"]
categories = ["Data structures", "Development tools", "Finance", "Simulation"]

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
criterion = "0.5.0"  # for benchmarking

[dev-dependencies]
rustfmt = "0.10.0"    # for code formatting

[lib]
name = "atelier"
crate-type = ["lib"]
test = true
doctest = true

