# pyproject.toml
[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "atelier"
version = "0.0.3"

[tool.setuptools.packages]
# Python packages/modules
find = { where = ["python"]}

[[tool.setuptools-rust.ext-modules]]
# private rust extension module to be packaged into the python package
target = "atelier"
path = "Cargo.toml"
binding = "PyO3"

