[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "rs_atelier"
version = "0.0.4"

[tool.setuptools.packages]
find = { where = ["python"]}

[[tool.setuptools-rust.ext-modules]]
target = "rs_atelier"

path = "Cargo.toml"
binding = "PyO3"
