[package]
name = "atelier"
version = "0.0.4"
edition = "2021"
description = "Computational Workshop and framework for Market microstructure replay and simulation"
authors = ["IteraLabs.ai <contact@iteralabs.ai>"]
license = "Apache-2.0"
repository = "https://github.com/iteralabs/atelier"
keywords = ["machine-learning", "framework", "math", "crypto"]
categories = ["data-structures", "development-tools", "finance", "simulation"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
criterion = "0.5.0"                                   # for benchmarking
rand = { workspace = true, features = ["small_rng"] }
rand_distr = "0.4.3"

[lib]
name = "atelier"
crate-type = ["lib"]
test = true
doctest = true
